# hipgisaxs

./: .gitignore  CMakeLists.txt
cmake/: Findyaml-cpp.cmake
include/common/: enums.hpp
include/config/: hig_input.hpp
include/ff/: ff.hpp  ff_ana.hpp  ff_num.hpp
include/ff/gpu/: ff_ana_gpu.cuh
include/file/: hig_file_reader.hpp  object2shape.hpp
include/image/: image.hpp
include/model/: structure.hpp
include/numerics/: numeric_utils.hpp
include/sim/: hipgisaxs_main.hpp
include/woo/timer/: woo_boostchronotimers.hpp
src/: CMakeLists.txt
src/config/: CMakeLists.txt  hig_input.cpp  yaml_input.cpp
src/ff/: CMakeLists.txt  ff_ana.cpp  ff_ana_sawtooth.cpp  ff_ana_sphere.cpp  ff_num.cpp
src/ff/gpu/: CMakeLists.txt  SConscript  ff_ana_gpu.cu  ff_ana_sphere_gpu.cu
src/file/: CMakeLists.txt  object2hdf5.c  object2shape.cpp
src/image/: CMakeLists.txt  image.cpp
src/model/: CMakeLists.txt  layer.cpp  multilayer.cpp  qgrid.cpp
src/numerics/: CMakeLists.txt
src/sf/: CMakeLists.txt
src/sf/gpu/: CMakeLists.txt  SConscript
src/sim/: CMakeLists.txt  hipgisaxs_main.cpp
src/test/: CMakeLists.txt
src/utils/: CMakeLists.txt
