

# analyzer  common  config  ff  file  image  init  model    numerics  SConscript  sf  sim  test  utils
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/common")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/config")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/ff")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/file")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/image")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/init")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/model")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/numerics")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/sf")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/sim")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/utils")
